--- a/style.css
+++ b/style.css
@@ -15,11 +15,17 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+
+.start {
   background-color: #070b1e;
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(3,1fr);
+  min-width: none;
+  
 }
 .navbar {
   background-color: #242c65;
@@ -48,6 +54,45 @@ body {
   background-color:#04cce4
 }
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  margin-block: 2rem;
+  gap: 2rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #ECE9E6;
+background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+
+}
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+/*
 
 h1 {
   font-size: 3.2em;
