--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@
 }
 
 img {
-  max-width: 100%;
+width: 100%;
+
   display: block;
   object-fit: cover;
 }
@@ -91,6 +92,13 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   display: flex;
   flex-direction: column;
   gap: .5rem;
+}
+#app{
+  background-color: #242424;
+}
+.list-group-item {	
+  color: #04cce4;
+  background-color:#070b1e;
 }
 /*
 
