--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #070b1e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +15,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
+body{
+  background-color: #070b1e;
+}
 .start {
   background-color: #070b1e;
   margin: 0;
@@ -26,6 +28,9 @@
   grid-template-columns: repeat(3,1fr);
   min-width: none;
   
+}
+.startOne{
+  background-color: #070b1e;
 }
 .navbar {
   background-color: #242c65;
@@ -59,6 +64,7 @@
   background-color: #242c65;
   color: #59b557;
   border: #59b557 solid 2px;
+  
 }
 .form-control option{
   font-weight: bold;
@@ -109,6 +115,7 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: .5rem;
 }
 #app{
@@ -118,6 +125,132 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   color: #04cce4;
   background-color:#070b1e;
 }
+
+.cardOne {
+  margin: 50px auto;
+}
+.container{
+  background-color: #070b1e;
+}
+
+.body {
+  position: relative;
+  width: 720px;
+  height: 440px;
+  margin: 20px auto;
+  border: 1px solid #dddd;
+  border-radius: 18px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.box-1 img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 5px solid #FFFFFF;
+  margin-left: 15px;
+}
+
+.box-2 {
+  margin-left: 15px;
+  margin-top: 15px;
+  padding: 30px;
+}
+
+.box-1,
+.box-2 {
+  width: 50%;
+}
+
+.h-1 {
+  font-size: 32px;
+  font-weight: 700;
+  color: #FFFFFF;
+}
+
+.text-muted {
+  font-size: 20px;
+  color: #fff;
+}
+
+.container .box {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid transparent;
+  text-decoration: none;
+  background-color: #070b1e;
+}
+
+
+.buttonUser{
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+		-webkit-tap-highlight-color: transparent;
+}
+
+.buttonUser {
+	width: 150px;
+	height: 50px;
+	cursor: pointer;
+	background: #6dd6d1;
+	border: none;
+	border-radius: 10px;
+	color: white;
+	font-size: 20px;
+	transition: 500ms;
+}
+
+.buttonUser:hover {
+		border: 2px solid #6dd6d1;
+	animation: hueRotation 2s linear infinite;
+}
+
+@keyframes hueRotation {
+	to {filter: hue-rotate(360deg);}
+}
+
+.buttonUser:focus {
+	outline: none;
+}
+
+
+@media (max-width:767px) {
+  body {
+      padding: 10px;
+  }
+
+  .body {
+      width: 100%;
+      height: 100%;
+  }
+
+  .box-1 {
+      width: 100%;
+  }
+  .box-1 img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0%;
+    border: 0px;
+    margin-left: 0px;
+  }
+  
+
+  .box-2 {
+      width: 100%;
+      height: 440px;
+  }
+}
+
 /*
 
 h1 {
