--- a/style.css
+++ b/style.css
@@ -19,6 +19,26 @@ body{
   background-color: #070b1e;
   font-family: 'Exo 2'
 }
+.banner{
+  height: 200px;
+  margin: auto;
+  margin-top: 25px;
+  width: 80%;
+  background-image: url('https://i.pinimg.com/originals/5b/66/7d/5b667d877265b876259a1633403b0ec9.jpg');
+  background-repeat: no-repeat;
+  object-fit: cover;
+  background-position: center;
+  border-radius: 100px;
+}
+.banner-content{
+  margin-left: 45%;
+  margin-right: auto;
+  padding-top: 75px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #FFFFFF;
+
+}
 .start {
   background-color: #070b1e;
   margin: 0;
@@ -33,30 +53,54 @@ body{
 .startOne{
   background-color: #070b1e;
 }
-.start-box{
+.start-boxEpisode{
   background-color: #070b1e;
   padding-top: 3%;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(3,1fr);
+  place-items: center;
+}
+.start-boxLocation{
+  background-color: #070b1e;
+  padding-top: 3%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
   place-items: center;
 }
 
-.list-group-item {	
-  width: 40em;
+.list-group-item-location {	
+  width: 30em;
   color: #04cce4;
   background-color:#070b1e;
   background-color:#242c655f;
-  margin-top: 2%;
-  margin-bottom: 1%;
   text-align: center;
   border: #04cce4 solid 2px;
+  border-radius: 10px;
 }
+.list-group-item-episode {	
+  width: 30em;
+  color: #59b557;
+  background-color:#242c655f;
+  text-align: center;
+  border: #59b557 solid 2px;
+  border-radius: 10px;
+}
+
+
+.card__body_Episode{
+  padding-top: 10px;
+  padding-bottom: 2%;
+  
+}
+
 .navbar {
   background-color: #242c65;
+  width: 100% !important;
 }
 .navbar .navbar-brand img{
   width: 150px;
   height: 60px;
+
 }
 .navbar li a{
   color: white
@@ -140,10 +184,6 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
 }
 #app{
   background-color: #242424;
-}
-.list-group-item {	
-  color: #04cce4;
-  background-color:#070b1e;
 }
 
 .cardOne {
@@ -241,9 +281,32 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
 .buttonUser:focus {
 	outline: none;
 }
-
+@media (max-width: 1300px) {
+  .start-boxEpisode{
+    grid-template-columns: repeat(2,1fr);
+  }
+  .start-boxLocation{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+@media (max-width: 1200px) {
+  .start{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+@media (max-width: 960px) {
+  .start-boxEpisode{
+    grid-template-columns: repeat(1,1fr);
+  }
+  .start-boxLocation{
+    grid-template-columns: repeat(1,1fr);
+  }
+}
 
 @media (max-width:767px) {
+  .start{
+    grid-template-columns: repeat(1,1fr);
+  }
   body {
       padding: 10px;
   }
@@ -271,70 +334,3 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   }
 }
 
-/*
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-*/
